Linkeo todas las paginasr

--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,12 +1,21 @@
-// Colores
-$colorBlanco: #ffffff;
-$colorNegro: #000000;
-$colorPrimario: #e91e63;
-$colorSecundario: #f5f5f5;
+$primary-color: #3d8144;
+$secondary-color: #2a2a2a;
+$text-light: #ffffff;
+$text-dark: #333333;
+$bg-light: #f7f7f7;
+$max-width: 1200px;
 
-// Tipografía
-$fuentePrincipal: 'Open Sans', sans-serif;
 
-// Espaciado y tamaños base
-$espaciado: 1rem;
-$max-width-contenedor: 1200px;
+
+// // Colores
+// $colorBlanco: #ffffff;
+// $colorNegro: #000000;
+// $colorPrimario: #e91e63;
+// $colorSecundario: #f5f5f5;
+
+// // Tipografía
+// $fuentePrincipal: 'Open Sans', sans-serif;
+
+// // Espaciado y tamaños base
+// $espaciado: 1rem;
+// $max-width-contenedor: 1200px;
