--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,85 +5,102 @@
   align-items: center;
 }
 
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #fff;
+  height: 140px;
+}
+
 .navbar .container-fluid {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.navbar-brand {
-  flex-shrink: 0;
-  padding: 0;
 }
 
 .navbar-brand img.logotipo {
   width: 120px;
   height: auto;
-  display: block;
 }
 
 .navbar-collapse {
   flex-grow: 1;
-  display: flex !important;
-  justify-content: center;
-}
-
-.navbar-nav {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 2rem;
-  width: auto;
-  padding-left: 0;
-  margin-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.95);
+
 }
 
-.navbar-nav .nav-link {
-  font-size: 1.15rem;
-  font-weight: 600;
-  color: #333;
-  padding: 0.5rem 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+.navbar-collapse.show {
+  background-color: rgba(255, 255, 255, 0.95); 
+  padding: 1rem;
+  border-radius: 0 0 8px 8px; 
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+ 
 }
 
-.navbar-nav .nav-link:hover {
-  color: rgb(0, 128, 0);
+.navbar-collapse.collapse:not(.show) {
+  background-color: transparent;
+}
+
+@media (min-width: 992px) {
+  .navbar-collapse {
+    justify-content: center !important;
+  }
+
+  .navbar-nav {
+    flex-direction: row;
+    gap: 2rem;
+  }
 }
 
 @media (max-width: 991.98px) {
   .navbar-collapse {
-    justify-content: flex-start !important;
+    justify-content: center !important;
   }
 
   .navbar-nav {
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
     width: 100%;
+    padding-left: 0;
+  }
+
+  .navbar-nav .nav-link {
+    text-align: center;
+    width: 100%;
+    font-size: 2.6rem;  
+    font-weight: 600;
+    color: #333;
+    padding: 0.5rem 1rem;
   }
 }
 
 
+.navbar-nav .nav-link:hover {
+  color: rgb(0, 128, 0);
 
+}
+
+.gatos-header,
 .index-header {
-  min-height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 70vh;
+  padding-top: 80px;
+  margin-top: 0;
   background-image: url("../images/background.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  text-align: center;
-  padding: 2rem;
-  padding-top: 80px;
+  position: relative;
+  color: #ffffff;
+  width: 100%;
 }
 
 .index-h1 {
@@ -93,15 +110,15 @@
 
 .gatos-header-content,
 .index-header-content {
+  display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  height: 100%;
   width: 100%;
-  padding: 2rem;
   max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 80px;
+  padding: 2rem;
+  margin: 0 auto;
 }
 
 .index-header-flex,
@@ -126,7 +143,7 @@
   color: #ffffff;
   text-decoration: none;
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 5rem;
   letter-spacing: 0.5px;
   display: flex;
   justify-content: center;
@@ -188,4 +205,19 @@
 
 .gatos-btn-header:hover {
   background-color: rgba(0, 0, 0, 0.65);
+}
+
+.navbar-nav .nav-link {
+  font-size: 1.4rem !important;
+  font-weight: 600 !important;
+  color: #333 !important;
+  padding: 0.5rem 1rem !important;
+}
+
+@media (max-width: 991.98px) {
+  .navbar-nav .nav-link {
+    font-size: 1.8rem !important;
+    text-align: center !important;
+    width: 100% !important;
+  }
 }
