--- a/sass/mq/_mq.scss
+++ b/sass/mq/_mq.scss
@@ -1,17 +1,36 @@
-/* Tablets (iPad y similares) - 2 cards */
-@media (max-width: 1024px) and (min-width: 769px) {
-  .card-items,
-  .gatos-card {
-    flex: 1 1 calc(50% - 1rem);
-    max-width: calc(50% - 1rem);
-  }
-}
+// /* Tablets (iPad y similares) - 2 cards */
+// @media (max-width: 1024px) and (min-width: 769px) {
+//   .card-items,
+//   .gatos-card {
+//     flex: 1 1 calc(50% - 1rem);
+//     max-width: calc(50% - 1rem);
+//   }
+// }
 
-/* Mobile (menos de 768px) - 2 cards */
+// /* Mobile (menos de 768px) - 2 cards */
+// @media (max-width: 768px) {
+//   .card-items,
+//   .gatos-card {
+//     flex: 1 1 calc(50% - 1rem) !important;
+//     max-width: calc(50% - 1rem) !important;
+//   }
+// }
+
+
 @media (max-width: 768px) {
-  .card-items,
-  .gatos-card {
-    flex: 1 1 calc(50% - 1rem) !important;
-    max-width: calc(50% - 1rem) !important;
+  header .header-content h1 {
+    font-size: 2rem;
+  }
+
+  header .header-content p {
+    font-size: 1rem;
+  }
+
+  main .card-container {
+    grid-template-columns: 1fr;
+  }
+
+  footer {
+    padding: 1rem;
   }
 }
