--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,16 +1,11 @@
-// UTILIDADES
-@import "utilities/variables";
-@import "utilities/mixins";
-@import "utilities/extends";
+@use 'utilities/variables';
+@use 'utilities/mixins';
+@use 'utilities/extends';
+@use 'mq/mq';
+@use 'layout/header';
+@use 'layout/main';
+@use 'layout/footer';
 
-// MEDIA QUERIES
-@import "mq/mq";
-
-// LAYOUT
-@import "layout/paginas";
-@import "layout/header";
-@import "layout/main";
-@import "layout/footer";
 
 //Variables
 
