--- a/sass/utilities/_extends.scss
+++ b/sass/utilities/_extends.scss
@@ -1,7 +1,36 @@
-//Extend 
+// //Extend 
 
-.flexBasico{
+// .flexBasico{
+//   display: flex;
+//   justify-content: center; 
+//   align-items: center;         
+// }
+
+%flex-column {
   display: flex;
-  justify-content: center; 
-  align-items: center;         
+  flex-direction: column;
+  gap: 1rem;
+}
+
+%card-style {
+  background-color: white;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  text-align: center;
+}
+.wpplogo {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  height: 60px;
+  width: auto;
+  z-index: 1000;
+  cursor: pointer;
+
+  @media (max-width: 576px) {
+    height: 50px;
+    bottom: 15px;
+    right: 15px;
+  }
 }
