--- a/sass/utilities/_mixins.scss
+++ b/sass/utilities/_mixins.scss
@@ -1,8 +1,20 @@
-@mixin gridArea($valorUno, $valorDos, $valorTres, $valorCuatro) {
-  grid-area: #{$valorUno} / #{$valorDos} / #{$valorTres} / #{$valorCuatro};
-}
-@mixin flexBasico {
+// @mixin gridArea($valorUno, $valorDos, $valorTres, $valorCuatro) {
+//   grid-area: #{$valorUno} / #{$valorDos} / #{$valorTres} / #{$valorCuatro};
+// }
+// @mixin flexBasico {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+@mixin flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@mixin grid-responsive($min) {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax($min, 1fr));
+  gap: 1.5rem;
 }
