--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -5,17 +5,14 @@ $text-dark: #333333;
 $bg-light: #f7f7f7;
 $max-width: 1200px;
 
+$font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-size-base: 16px;
 
-
-// // Colores
-// $colorBlanco: #ffffff;
-// $colorNegro: #000000;
-// $colorPrimario: #e91e63;
-// $colorSecundario: #f5f5f5;
-
-// // Tipografía
-// $fuentePrincipal: 'Open Sans', sans-serif;
-
-// // Espaciado y tamaños base
-// $espaciado: 1rem;
-// $max-width-contenedor: 1200px;
+$green: #2a7a2a;
+$green-light: rgba(0, 128, 0, 0.2);
+$green-hover: rgba(0, 128, 0, 0.55);
+$white-transparent-36: rgba(255, 255, 255, 0.36);
+$white-transparent-55: rgba(255, 255, 255, 0.55);
+$white-transparent-80: rgba(255, 255, 255, 0.8);
+$black-transparent-47: rgba(0, 0, 0, 0.47);
+$black-transparent-65: rgba(0, 0, 0, 0.65);
